# RayTracer

./: CMakeLists.txt  README.md
scenes/: scene1.csv  scene2.csv  scene3.csv
src/: Application.cpp  Application.h  AssimpModelLoader.cpp  AssimpModelLoader.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ComponentShape.cpp  ComponentShape.h  CompositeShape.cpp  CompositeShape.h  ConcurrencyHandler.cpp  ConcurrencyHandler.h  Constants.h  EntityDescriptionInterface.h  Image.cpp  Image.h  Intersection.cpp  Intersection.h  KeyEventHandler.cpp  KeyEventHandler.h  LeafShape.cpp  LeafShape.h  Light.cpp  Light.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MouseEventHandler.cpp  MouseEventHandler.h  NamedEntity.cpp  (+32 more)
